1. Add logic to replace dollar eg - 1. $ -> ${"$"} 2. ignore replacement of $$

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -20,7 +20,7 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <toolWindow
-                id="com.rahul.gqlformat.MyToolWindow" anchor="right" factoryClass="com.rahul.gqlformat.MyToolWindow">
+                id="Gql Format" anchor="right" factoryClass="com.rahul.gqlformat.MyToolWindow">
         </toolWindow>
     </extensions>
 
